--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profilee.png"
+  avatar           : "profileee.png"
   name             : "Zhengxi Qian"
   pronouns         : # example: "they/them"  
   bio              : "Doctoral Student in Digital Financial Technology"
